# gemini-transcribe

./: .coverage  .gitignore  GEMINI.md  audit_transcripts.py  debug_2h_global_memory.py  debug_preprocessing_only.py  langgraph指南.md  main.py  pyproject.toml  test_benchmark_dry_run.py  test_real_audio.py
app/: audio_exporter.py  benchmark_orchestrator.py  config.py  downloader.py  gemini_client.py  global_memory_generator.py  graph.py  metrics.py  models.py  transcriber.py  transcript_exporter.py  utils.py  vad_processor.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: comparison_report_large_audio.md  research_official_patterns.md
output/gemini_3_1_lite/: test_run_gemini_3.1_flash_lite_preview_transcript.json  test_run_gemini_3.1_flash_lite_preview_transcript.md
output/gemini_3_flash/: test_run_gemini_3_flash_preview_transcript.json  (+1 more)
scripts/: benchmark.py  fast_preprocess.py  fast_standardize.py  find_longest_audio.py  merge_audio.py
test_scripts/: calculate_wer_2h.py  debug_proxy_credentials.py  full_stt_benchmark_2h.py  run_full_matrix.py  test_real_audio.py  verify_2h_full_flow.py  verify_local_proxy_2h.py  verify_map_reduce_2h.py
tests/: test_audio_export.py  test_audio_preprocessing.py  test_benchmark.py  test_benchmark_reimplementation.py  test_downloader.py  test_exporter.py  test_fast_preprocess_integration.py  test_gemini_client.py  test_global_memory.py  test_graph.py  test_merger.py  test_native_thinking.py  test_normalization.py  test_sliding_window.py  test_transcriber.py  test_utils.py  test_vad.py
(+39 files in other folders)
