[project]
name = "gemini-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "evaluate>=0.4.6",
    "httpx>=0.28.1",
    "jiwer>=4.0.0",
    "langgraph>=1.0.10",
    "librosa>=0.11.0",
    "onnxruntime>=1.24.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydub>=0.25.1",
    "pyloudnorm>=0.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "torchcodec>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
